@@ -10,7 +10,7 @@ uid = fapolicyd
 gid = fapolicyd
 do_stat_report = 1
 detailed_report = 1
-db_max_size = 176
+db_max_size = 40
 subj_cache_size = 1549
 obj_cache_size = 8191
 watch_fs = ext2,ext3,ext4,tmpfs,xfs,vfat,iso9660
