@@ -2,6 +2,7 @@
 - Fix pattern detection in light of EXEC_PERM events
 - Conserve memory by dropping unneeded lists after startup
 - Do full reset of subject credentials when execve finishes 
+- Drop files in /usr/share, /usr/src, and /usr/include to reduce memory use
 
 0.9.3
 - In fapolicyd-cli, add a --list option to list rules
